Refatoração.