@@ -15,7 +15,6 @@ import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import static demo.sprint.configuration.exception.apiexterror.ApiErrorHandler.productValidation;
 
@@ -56,7 +55,7 @@ public class WalmartService {
         return repository.find(productQuery)
                 .stream()
                 .map(ProductEntityResponseMapper::toProductEntity)
-                .collect(Collectors.toList());
+                .toList();
     }
 
 }
